# disallow-db-connection-demo

./: README.md  manage.py  pyproject.toml
core/: models.py  views.py
core/migrations/: 0001_initial.py
disallow_db_connection_demo/: asgi.py  settings.py  urls.py  wsgi.py
